0. Stream API улучшения [#58167]