@@ -10,6 +10,6 @@ public class MatrixToList {
     public static List<Integer> convert(Integer[][] matrix) {
         return Stream.of(matrix)
                 .flatMap(Arrays::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
